2017-10-08: 4.0.0-preview.2

	New features:

	all : added final keyword (#6596)

	General improvements and optimizations:

	all : replaced some occurrences of List with Array
	all : changed haxe.xml.Fast to an abstract

	Removals:

	all : moved haxe.unit to hx3compat
	all : moved haxe.web.Request to hx3compat
	php : dropped php5 support; minimum supported php version is 7.0 now

	Bugfixes:

	all : fixed issue with various functions not being displayed in macro context (#6000)
	eval : fixed bug with equality handling
	eval : fixed issue with file creation not defaulting to binary
	cs/java : fixed DCE bug that would lose toString method of thrown objects
	php/python : fixed some bit operators for Int32 (#5938)
	php : fixed accessing `static inline var` via reflection (#6630)
	php : fixed Math.min() and Math.max() for NAN on PHP 7.1.9 and 7.1.10
	js : fixed js syntax error for `value.iterator--` (#6637)

2017-09-12: 4.0.0-preview.1

	New features:

	all : reworked macro interpreter
	all : added support for arrow functions

	General improvements and optimizations:

	js : improved generation of `break` inside `switch` inside loops (#4964)
	cs : improved generation of enum classes (#6119)
	sys : the `database` parameter of `Mysql.connect` is now optional
	js : updated jQuery extern (js.jquery.*) for jQuery 1.12.4 / 3.2.1 support.
	Makefile : default Unix installation location $(INSTALL_DIR) changed from /usr to /usr/local.
	Makefile : default Unix std location $(INSTALL_STD_DIR) changed from $(INSTALL_LIB_DIR)/std to $(INSTALL_DIR)/share/haxe/std.

	Removals:

	all : removed --eval command line argument
	sys : SPOD (sys.db.Object, sys.db.Manager and friends) was moved into a separate library `record-macros` (https://github.com/HaxeFoundation/record-macros)
	js : js.JQuery and js.SWFObject were moved into hx3compat library (https://github.com/HaxeFoundation/hx3compat),
	     it's recommended to use more modern js.jquery.JQuery and js.swfobject.SWFObject classes.